apps/gitops/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-portofolio
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
