apps/gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: myportofolio
  namespace: my-portofolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myportofolio
  template:
    metadata:
      labels:
        app: myportofolio
    spec:
      containers:
        - name: myportofolio
          image: quay-registry-quay-openshift-operators.apps.cluster-hvt9q.hvt9q.sandbox1172.opentlc.com/fajjarnr/myportofolio:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      imagePullSecrets:
        - name: quay-secret-registry
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
