apps/gitops/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myportofolio
  name: myportofolio
  namespace: my-portofolio
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: myportofolio
---
