apps/gitops/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: myportofolio
  name: myportofolio
  namespace: my-portofolio
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: myportofolio
    weight: 100
